Add car functionality

--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/CarDealer.App.csproj
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/CarDealer.App.csproj
@@ -183,7 +183,7 @@
     <Content Include="Views\Customers\About.cshtml" />
     <Content Include="Views\Customers\Edit.cshtml" />
     <Content Include="Views\Customers\All.cshtml" />
-    <Content Include="Views\Cars\Create.cshtml" />
+    <Content Include="Views\Cars\Add.cshtml" />
     <Content Include="Views\Cars\Delete.cshtml" />
     <Content Include="Views\Cars\About.cshtml" />
     <Content Include="Views\Cars\Edit.cshtml" />
