--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealer.Services/CarDealer.Services.csproj
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealer.Services/CarDealer.Services.csproj
@@ -64,6 +64,7 @@
     <Compile Include="SalesService.cs" />
     <Compile Include="Service.cs" />
     <Compile Include="SuppliersService.cs" />
+    <Compile Include="UsersService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CarDealer.Data\CarDealer.Data.csproj">
