--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/CarDealer.App.csproj
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/CarDealer.App.csproj
@@ -190,7 +190,7 @@
     <Content Include="Views\Cars\About.cshtml" />
     <Content Include="Views\Cars\Edit.cshtml" />
     <Content Include="Views\Cars\All.cshtml" />
-    <Content Include="Views\Suppliers\Create.cshtml" />
+    <Content Include="Views\Suppliers\Add.cshtml" />
     <Content Include="Views\Suppliers\Delete.cshtml" />
     <Content Include="Views\Suppliers\Details.cshtml" />
     <Content Include="Views\Suppliers\Edit.cshtml" />
