--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealer.Models/CarDealer.Models.csproj
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealer.Models/CarDealer.Models.csproj
@@ -50,6 +50,7 @@
     <Compile Include="BindingModels\Sales\AddSalesBm.cs" />
     <Compile Include="BindingModels\Suppliers\AddSupliersBm.cs" />
     <Compile Include="BindingModels\Suppliers\DeleteSupplierBm.cs" />
+    <Compile Include="BindingModels\Suppliers\EditSupplierBm.cs" />
     <Compile Include="BindingModels\Users\LoginUserBm.cs" />
     <Compile Include="BindingModels\Users\RegisterUserBm.cs" />
     <Compile Include="EntityModels\Car.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="ViewModels\Sales\AddSaleVm.cs" />
     <Compile Include="ViewModels\Supplier\AddSupplierVm.cs" />
     <Compile Include="ViewModels\Supplier\DeleteSupplierVm.cs" />
+    <Compile Include="ViewModels\Supplier\EditSupplierVm.cs" />
     <Compile Include="ViewModels\Users\LoginUserVm.cs" />
     <Compile Include="ViewModels\Users\RegisterUserVm.cs" />
     <Compile Include="ViewModels\Sales\SaleVm.cs" />
