--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealer.Services/CarDealer.Services.csproj
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealer.Services/CarDealer.Services.csproj
@@ -59,11 +59,12 @@
   <ItemGroup>
     <Compile Include="CarService.cs" />
     <Compile Include="CustomersService.cs" />
+    <Compile Include="LogService.cs" />
     <Compile Include="PartsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesService.cs" />
     <Compile Include="Service.cs" />
-    <Compile Include="SuppliersService.cs" />
+    <Compile Include="SuppliersService .cs" />
     <Compile Include="UsersService.cs" />
   </ItemGroup>
   <ItemGroup>
