--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/CarDealer.App.csproj
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/CarDealer.App.csproj
@@ -217,6 +217,7 @@
     <Content Include="Views\Logs\Details.cshtml" />
     <Content Include="Views\Logs\Edit.cshtml" />
     <Content Include="Views\Logs\All.cshtml" />
+    <Content Include="Views\Logs\DeleteAll.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
