--- a/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/CarDealer.App.csproj
+++ b/2. CSharp-Frameworks-ASPNET-Essentials-Exercises/CarDealerApp/CarDealerApp/CarDealer.App.csproj
@@ -218,6 +218,7 @@
     <Content Include="Views\Logs\Edit.cshtml" />
     <Content Include="Views\Logs\All.cshtml" />
     <Content Include="Views\Logs\DeleteAll.cshtml" />
+    <Content Include="Views\Shared\ArgumentException.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
