Refactoring  Data layer, Add Roles - Admin, Editor, Visitor

--- a/EventsApp/EventsApp.Models/App.config
+++ b/EventsApp/EventsApp.Models/App.config
@@ -14,4 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EventsApp-20170323101359.mdf;Initial Catalog=EventsApp;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
