--- a/EventsApp/EventsApp/EventsApp.csproj
+++ b/EventsApp/EventsApp/EventsApp.csproj
@@ -174,9 +174,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -245,9 +242,7 @@
     <Content Include="Views\Shared\_EventPartial.cshtml" />
     <Content Include="Views\Shared\_CategoriesAction.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -260,6 +255,10 @@
     <ProjectReference Include="..\EventApp.Services\EventApp.Services.csproj">
       <Project>{167E8300-E471-4870-8CE1-03C6038B7C6C}</Project>
       <Name>EventApp.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EventsApp.Data\EventsApp.Data.csproj">
+      <Project>{C3218158-A75E-4A7C-801A-1312818F3C43}</Project>
+      <Name>EventsApp.Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\EventsApp.Models\EventsApp.Models.csproj">
       <Project>{1E82E8DA-0620-4894-950B-2E1967F988AF}</Project>
