Fix some bugs of register promoter with info

--- a/EventsApp/EventsApp.Models/EventsApp.Models.csproj
+++ b/EventsApp/EventsApp.Models/EventsApp.Models.csproj
@@ -97,12 +97,15 @@
     <Compile Include="EntityModels\ApplicationUser.cs" />
     <Compile Include="EntityModels\Category.cs" />
     <Compile Include="EntityModels\Event.cs" />
+    <Compile Include="EntityModels\Promoter.cs" />
     <Compile Include="EntityModels\UserInfo.cs" />
+    <Compile Include="EntityModels\Visitor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account\ExternalLoginConfirmationViewModel.cs" />
     <Compile Include="ViewModels\Account\ExternalLoginListViewModel.cs" />
     <Compile Include="ViewModels\Account\ForgotPasswordViewModel.cs" />
     <Compile Include="ViewModels\Account\ForgotViewModel.cs" />
+    <Compile Include="BindingModels\AddInfoAccountBm.cs" />
     <Compile Include="ViewModels\Account\LoginViewModel.cs" />
     <Compile Include="ViewModels\Account\RegisterViewModel.cs" />
     <Compile Include="ViewModels\Account\ResetPasswordViewModel.cs" />
