--- a/EventsApp/EventsApp/EventsApp.csproj
+++ b/EventsApp/EventsApp/EventsApp.csproj
@@ -210,6 +210,7 @@
     <Content Include="Views\Events\Edit.cshtml" />
     <Content Include="Views\Events\All.cshtml" />
     <Content Include="Views\Events\Categories.cshtml" />
+    <Content Include="Views\Account\AddInfo.cshtml" />
     <None Include="Views\Home\Events.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
