Fix loyaout with authorization cases

--- a/EventsApp/EventApp.Services/EventApp.Services.csproj
+++ b/EventsApp/EventApp.Services/EventApp.Services.csproj
@@ -92,6 +92,7 @@
     <Compile Include="PromoterService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
+    <Compile Include="VisitorService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EventsApp.Data\EventsApp.Data.csproj">
