refactorting code edit promoter info

--- a/EventsApp/EventsApp/EventsApp.csproj
+++ b/EventsApp/EventsApp/EventsApp.csproj
@@ -171,6 +171,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Areas\Comment\CommentAreaRegistration.cs" />
     <Compile Include="Areas\Event\EventAreaRegistration.cs" />
     <Compile Include="Areas\Visitor\Controllers\VisitorsController.cs" />
     <Compile Include="Areas\Visitor\VisitorAreaRegistration.cs" />
@@ -202,6 +203,7 @@
     <Content Include="Areas\Visitor\Views\Index.cshtml" />
     <Content Include="Areas\Visitor\Views\MyEvents.cshtml" />
     <Content Include="Areas\Event\Views\Shared\_Comments.cshtml" />
+    <Content Include="Areas\Comment\Views\web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -270,6 +272,9 @@
     <Content Include="Views\Shared\_LocationsListForEventAll.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Areas\Comment\Controllers\" />
+    <Folder Include="Areas\Comment\Models\" />
+    <Folder Include="Areas\Comment\Views\Shared\" />
     <Folder Include="Areas\Visitor\Models\" />
     <Folder Include="Areas\Visitor\Views\Shared\" />
     <Folder Include="Areas\Visitor\Views\Visitors\" />
