--- a/EventsApp/EventsApp.Data/packages.config
+++ b/EventsApp/EventsApp.Data/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.3.0" targetFramework="net452" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net452" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="jQuery" version="1.9.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net452" />
 </packages>
