--- a/EventsApp/EventApp.Services/EventApp.Services.csproj
+++ b/EventsApp/EventApp.Services/EventApp.Services.csproj
@@ -54,6 +54,14 @@
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -89,6 +97,11 @@
     <Compile Include="AccountService.cs" />
     <Compile Include="EventService.cs" />
     <Compile Include="HomeService.cs" />
+    <Compile Include="Intefaces\IAccountService.cs" />
+    <Compile Include="Intefaces\IEventService.cs" />
+    <Compile Include="Intefaces\IHomeService.cs" />
+    <Compile Include="Intefaces\IPromoterService.cs" />
+    <Compile Include="Intefaces\IVisitorService.cs" />
     <Compile Include="PromoterService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
@@ -108,6 +121,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
