--- a/EventsApp/EventsApp.Data/packages.config
+++ b/EventsApp/EventsApp.Data/packages.config
@@ -9,4 +9,6 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Moment.js" version="2.9.0" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
 </packages>
