--- a/EventsApp/EventsApp.Models/packages.config
+++ b/EventsApp/EventsApp.Models/packages.config
@@ -9,4 +9,6 @@
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
 </packages>
