--- a/EventsApp/EventsApp/EventsApp.csproj
+++ b/EventsApp/EventsApp/EventsApp.csproj
@@ -53,6 +53,26 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.0.0\lib\net45-full\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject.Web.Common, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.Web.Common.3.2.0.0\lib\net45-full\Ninject.Web.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject.Web.Mvc, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.MVC5.3.2.1.0\lib\net45-full\Ninject.Web.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -105,6 +125,10 @@
     <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
@@ -169,18 +193,22 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
+    <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Areas\Comment\CommentAreaRegistration.cs" />
+    <Compile Include="Areas\Account\AccountAreaRegistration.cs" />
+    <Compile Include="Areas\Account\Controllers\AccountController.cs" />
     <Compile Include="Areas\Event\EventAreaRegistration.cs" />
+    <Compile Include="Areas\Home\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Home\HomeAreaRegistration.cs" />
+    <Compile Include="Areas\Manage\Controllers\ManageController.cs" />
+    <Compile Include="Areas\Manage\ManageAreaRegistration.cs" />
+    <Compile Include="Areas\Promoter\Controllers\PromotersController.cs" />
+    <Compile Include="Areas\Promoter\PromoterAreaRegistration.cs" />
     <Compile Include="Areas\Visitor\Controllers\VisitorsController.cs" />
     <Compile Include="Areas\Visitor\VisitorAreaRegistration.cs" />
     <Compile Include="Attributies\MyAuthorizeAttribute.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Areas\Event\Controllers\EventsController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\PromotersController.cs" />
     <Compile Include="CustomHelpers\ImageHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -192,6 +220,9 @@
     <Content Include="Content\bootstrap-def.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
+    <Content Include="Content\pic\whitestar.gif" />
+    <Content Include="Content\pic\yellowstar.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -203,8 +234,38 @@
     <Content Include="Areas\Visitor\Views\Index.cshtml" />
     <Content Include="Areas\Visitor\Views\MyEvents.cshtml" />
     <Content Include="Areas\Event\Views\Shared\_Comments.cshtml" />
-    <Content Include="Areas\Comment\Views\web.config" />
     <Content Include="Areas\Event\Views\AllMy.cshtml" />
+    <Content Include="Areas\Home\Views\web.config" />
+    <Content Include="Areas\Home\Views\Contact.cshtml" />
+    <Content Include="Areas\Home\Views\Events.cshtml" />
+    <Content Include="Areas\Home\Views\Index.cshtml" />
+    <Content Include="Areas\Promoter\Views\web.config" />
+    <Content Include="Areas\Promoter\Views\All.cshtml" />
+    <Content Include="Areas\Promoter\Views\Create.cshtml" />
+    <Content Include="Areas\Promoter\Views\Delete.cshtml" />
+    <Content Include="Areas\Promoter\Views\Details.cshtml" />
+    <Content Include="Areas\Promoter\Views\EditProfile.cshtml" />
+    <Content Include="Areas\Account\Views\web.config" />
+    <Content Include="Areas\Account\Views\_ExternalLoginsListPartial.cshtml" />
+    <Content Include="Areas\Account\Views\AddInfo.cshtml" />
+    <Content Include="Areas\Account\Views\ConfirmEmail.cshtml" />
+    <Content Include="Areas\Account\Views\ExternalLoginConfirmation.cshtml" />
+    <Content Include="Areas\Account\Views\ExternalLoginFailure.cshtml" />
+    <Content Include="Areas\Account\Views\ForgotPassword.cshtml" />
+    <Content Include="Areas\Account\Views\ForgotPasswordConfirmation.cshtml" />
+    <Content Include="Areas\Account\Views\Login.cshtml" />
+    <Content Include="Areas\Account\Views\Register.cshtml" />
+    <Content Include="Areas\Account\Views\ResetPassword.cshtml" />
+    <Content Include="Areas\Account\Views\ResetPasswordConfirmation.cshtml" />
+    <Content Include="Areas\Account\Views\SendCode.cshtml" />
+    <Content Include="Areas\Account\Views\VerifyCode.cshtml" />
+    <Content Include="Areas\Manage\Views\web.config" />
+    <Content Include="Areas\Manage\Views\AddPhoneNumber.cshtml" />
+    <Content Include="Areas\Manage\Views\ChangePassword.cshtml" />
+    <Content Include="Areas\Manage\Views\Index.cshtml" />
+    <Content Include="Areas\Manage\Views\ManageLogins.cshtml" />
+    <Content Include="Areas\Manage\Views\SetPassword.cshtml" />
+    <Content Include="Areas\Manage\Views\VerifyPhoneNumber.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -223,8 +284,6 @@
     <Content Include="Areas\Event\Views\Edit.cshtml" />
     <Content Include="Areas\Event\Views\All.cshtml" />
     <Content Include="Areas\Event\Views\Categories.cshtml" />
-    <Content Include="Views\Account\AddInfo.cshtml" />
-    <None Include="Views\Home\Events.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -236,51 +295,25 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Views\Account\ForgotPassword.cshtml" />
-    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Account\ResetPassword.cshtml" />
-    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\SendCode.cshtml" />
-    <Content Include="Views\Account\VerifyCode.cshtml" />
-    <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
-    <Content Include="Views\Manage\ChangePassword.cshtml" />
-    <Content Include="Views\Manage\Index.cshtml" />
-    <Content Include="Views\Manage\ManageLogins.cshtml" />
-    <Content Include="Views\Manage\SetPassword.cshtml" />
-    <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_EventAllPartial.cshtml" />
     <Content Include="Areas\Event\Views\Shared\_CategoriesListForCreateEvent.cshtml" />
     <Content Include="Views\Shared\Unauthorized.cshtml" />
     <Content Include="Views\Shared\_EventBriefPartial.cshtml" />
-    <Content Include="Views\Promoters\Create.cshtml" />
-    <Content Include="Views\Promoters\Delete.cshtml" />
-    <Content Include="Views\Promoters\Details.cshtml" />
-    <Content Include="Views\Promoters\All.cshtml" />
     <Content Include="Views\Shared\_DisplayEventBriefVmForPromoterProfile.cshtml" />
-    <Content Include="Views\Promoters\EditProfile.cshtml" />
     <Content Include="Views\Shared\_CategoriesForEventAll.cshtml" />
     <Content Include="Views\Shared\_LocationsListForEventAll.cshtml" />
     <Content Include="Views\Shared\DateTime.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Areas\Comment\Controllers\" />
-    <Folder Include="Areas\Comment\Models\" />
-    <Folder Include="Areas\Comment\Views\Shared\" />
+    <Folder Include="Areas\Account\Views\Shared\" />
+    <Folder Include="Areas\Home\Views\Shared\" />
+    <Folder Include="Areas\Manage\Views\Shared\" />
+    <Folder Include="Areas\Promoter\Views\Shared\" />
     <Folder Include="Areas\Visitor\Models\" />
     <Folder Include="Areas\Visitor\Views\Shared\" />
     <Folder Include="Areas\Visitor\Views\Visitors\" />
-    <Folder Include="Views\Events\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
