--- a/EventsApp/EventsApp/Web.config
+++ b/EventsApp/EventsApp/Web.config
@@ -11,11 +11,12 @@
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
+    <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="None"/>
+     <!--<customErrors mode="RemoteOnly" defaultRedirect="Error.cshtml"></customErrors>-->
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
