--- a/EventsApp/EventsApp/Web.config
+++ b/EventsApp/EventsApp/Web.config
@@ -21,6 +21,12 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.webServer>
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
+    <remove statusCode="404" subStatusCode="-1" />
+    <remove statusCode="500" subStatusCode="-1" />
+    <error statusCode="404" path="Error404.html" responseMode="File" />
+    <error statusCode="500" path="Error.html" responseMode="File" />
+  </httpErrors>-->
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
